# trinity

./: .gitignore  .gitmodules  AGENTS.md  AUTONOMY_STATUS.md  CONTRIBUTING.md  FEDERATION.md  GOVERNANCE.md  HUMAN.md  LICENSE-INTENT.md  NOTICE  ORIENTATION.md  README.md  SECURITY.md  SKILLS.md  TRADEMARK.md  TRINITY.md  deno.jsonc  install.sh  llms.txt  mise.toml  node-sync.sh  t
.githooks/: post-merge
0x0/: 00.ndjson  01.ts  02.sh  03.ts  04.ts  05.ts  06.ts  07.ts  08.ts  09.ts  0A.ts  0B.ts  0C.ts  0F.ts
0x2/: 0.ts  3.ts  4.ts  5.ts  6.ts  C.ts  D.ts  E.ts
0x3/: 5.ts  A.ts  C.ts
0x4/: 0.ts  1.ts  A.ts  D.ts  E.ts  F.ts
0x5/: 0.ts  2.ts  3.ts  4.ts  9.ts  A.ts  C.ts  D.ts  E.ts  F.ts
0x6/: 3.ts  A.ts  C.ts  D.ts  E.ts
0x7/: 0.ts  D.ts  E.ts  F.ts
0xF/: A.ts
capabilities/: README.md  trinity.capabilities.v0.1.legacy.json
contracts/: AUTONOMY_MANDATE.v1.md  CANONICAL_HASH.v0.1.md  CHORD_CLAIM.v0.1.md  CODEICIDE_PROPOSAL.v0.1.md  COGNITIVE_FIELD.v0.1.md  COGNITIVE_RECOMMENDATION.v0.1.md  FQDN_SEMANTIC_DNS.v0.1.md  FQDN_SEMANTIC_DNS.v1.0.md  FREE_ENERGY_PRINCIPLE.v0.1.md  GAP_CLOSURE.v0.draft.md  GLOSSARY_DERIVED_SEMANTICS.v0.draft.md  GOVERNANCE_FLOW.v0.md  HEX_DIPOLE_SEED.v0.draft.md  HEX_REFRACTION.v0.draft.md  HEX_ROUTE_VOCABULARY.v0.draft.md  INVARIANT_RELATIONS.v0.1.draft.md  IN_LEDGER_OUT.v0.1.md  IN_LEDGER_SRC_PROJECTION.v0.2.md  JOURNAL_CORE.v2.0.draft.md  (+27 more)
probes/spore-execute-v0/rust/: Cargo.toml
probes/spore-execute-v0/rust/src/: main.rs
probes/spore-meter-instr-v0/rust/: Cargo.toml
probes/spore-meter-instr-v0/rust/src/: main.rs
(+1782 files in other folders)
