[package]
name = "spore-meter-instr-v0"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
wasmparser = "0.218"
wasm-encoder = "0.218"
wasmtime = "26"

[[bin]]
name = "instrument"
path = "src/main.rs"

[[bin]]
name = "wasmtime_runner"
path = "src/bin/wasmtime_runner.rs"

[[bin]]
name = "wasmtime_enforce"
path = "src/bin/wasmtime_enforce.rs"

[dependencies.anyhow]
version = "1"

[profile.release]
opt-level = 3
